# academiq-research

./: .env.example  .gitattributes  .gitignore  .mailmap  AQ_ENGINE_CONTRACT.md  AcademiQ-Kur.bat  AcademiQ-Kur.ps1  CHANGELOG.md  CODEX_DEBT_PROMPT.md  DOC_ENGINE_PORT_MAP.md  EDITOR_RECOVERY_NOTES.md  EDITOR_STABILITY_ROADMAP.md  EDITOR_WORD_PARITY_PLAN.md  GEMINI.md  GEMINI_DOMAIN_PORT_PROMPT.md  LEAN_UI_PRODUCT_ROADMAP.md  LEGACY_RUNTIME_SPLIT_PLAN.md  MIGRATION_BLOCKER.md  MIGRATION_NOTES.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.7.md  RESUME_HANDOFF.md  ROADMAP.md  ROADMAP_AUDIT_2026-04-21.md  TECH_DEBT.md  THIRD_PARTY_NOTICES.md  WORD_LEVEL_EDITOR_ROADMAP.md  academiq-research.html  build.bat  create-icon.js  editor-src.js  index.html  install-builder.bat  main.js  migrate-plan.md  package-lock.json  package.json  preload.js  (+7 more)
docs/: DUAL_RUN_GUIDE.md  FEATURE_PARITY_AUDIT.md  FEDORA_BETA_BUGS.md  FEDORA_BETA_RELEASE.md  LEGACY_DATA_SCHEMA.md  PHASE6_CAPTURE_ARCHITECTURE.md  RELEASE_PIPELINE.md  SMARTSCREEN_NOTICE.md  feature-placement-plan.md  legacy-behavior-map.md  legacy-feature-inventory.md  new-shell-map.md  old-ui-behavior-map.md  react-feature-parity-checklist.md  react-feature-ui-map.md  react-ui-binding-audit.md  ui-cleanup-audit.md
legacy/: README.md
scripts/: analyze-state.js  build-renderer.js  build-sidecar.js  build-tauri.js  build-win.js  bump-version.js  configure-tauri-linux.js  dedupe-script-tags.js  dual-run-crash-gate.js  editor-stability-gate.js  export-quality-gate.js  fetch-pdfium.ps1  fix-encoding.js  generate-signing-cert.ps1  inline-src.js  inline-sync-audit.js  patch-renderer-index.js  release-gate.js  restore-alpha.ps1  restore-src-tags.js  restore-src.js  setup-languagetool.js  setup-zemberek.js  sign-installer.ps1  sync-dictionary.js  tauri-bundle-gate.js
src/: academic-objects.js  annotation-state.js  apa-style-engine.js  app-bootstrap.js  app-shell.js  bibliography-export.js  bibliography-state.js  binary-payload.js  browser-capture.js  citation-dom-state.js  citation-runtime.js  citation-state.js  citation-styles.js  doc-tabs-state.js  document-outline.js  document-state.js  docx-export.js  duplicate-detection.js  editor-core.js  editor-integration.js  editor-lifecycle.js  editor-runtime.js  editor-shell.js  highlight-state.js  lean-ui-shell.js  legacy-runtime.js  library-state.js  literature-gap-map.js  literature-matrix-extraction.js  literature-matrix-filters.js  literature-matrix-local-assistant.js  literature-matrix-state.js  literature-matrix-view.js  local-ocr.js  main-process-browser-capture-store.js  main-process-browser-capture.js  main-process-capture-queue-dispatcher.js  main-process-capture-queue-poller.js  main-process-capture-status-builder.js  main-process-languagetool.js  (+56 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql
src-tauri/resources/browser-capture-extension/chromium/: popup.js
src-tauri/resources/browser-capture-extension/common/: config.js  detector.js
src-tauri/resources/browser-capture-extension/firefox/: background.js  popup.html
src-tauri/src/: lib.rs  main.rs  telemetry.rs
src-tauri/src/capture/: bridge.rs
src-tauri/src/commands/: app.rs  backup.rs  browser_capture.rs  data.rs  dialog.rs  doc_history.rs  export.rs  local_matrix.rs  mod.rs  net.rs  ocr.rs  pdf.rs  spell.rs  sync.rs  update.rs  window.rs  word.rs
src-tauri/src/db/: migrate.rs
src-tauri/src/pdf/: annotations.rs  export.rs  extract.rs  fonts.rs  metadata.rs  mod.rs  pdfium_init.rs  render.rs  url_fallback.rs
tests/: MANUAL_SMOKE.md  academic-objects.test.js  annotation-state.test.js  apa-style-engine.test.js  aq-engine-cross-shell.test.js  aq-engine-integration.test.js  ipc-parity.test.js  (+104 more)
(+244 files in other folders)
