[package]
name = "academiq-research-tauri"
version = "1.1.8"
description = "AcademiQ Research Tauri shell"
authors = ["AcademiQ"]
license = "MIT"
repository = ""
edition = "2021"
default-run = "academiq-research-tauri"

[lib]
name = "academiq_research_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
lopdf = "0.34"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
printpdf = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "deflate", "brotli", "http2"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spellbook = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
ttf-parser = "0.21"
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "time"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
